fixed annoying overflow bug!

--- a/src/components/navbar/Navbar.module.css
+++ b/src/components/navbar/Navbar.module.css
@@ -1,6 +1,6 @@
 nav {
     display: block;
-    width: 100%;
+    max-width: 100%;
     height: 50px;
     position: relative;
     position: sticky;
