--- a/src/index.css
+++ b/src/index.css
@@ -61,4 +61,5 @@ html {
 
 body {
   background: #515152;
+  overflow-x: hidden;
 }
